navBar size fix, wonky on mobile.

--- a/nana-calc.css
+++ b/nana-calc.css
@@ -19,7 +19,7 @@ div {
     top: 0;
     border: none;
     display: grid;
-    grid-template-columns: 7% 86% 7%;
+    grid-template-columns: 7% 1fr 7%;
     background-color: none;
     padding-bottom: 15px;
 }
